# simSensors

./: CMakeLists.txt  activity_model.pth  imu_dataset.csv  test.cpp
python/: generate_dataset.py  test.py  train_model.py  visualize.py
src/: feature_extractor.cpp  feature_extractor.h  imu_simulator.cpp  imu_simulator.h  pybind_wrapper.cpp
